# CADSimplifier

./: .gitignore  CADSimplifier.dox  CADSimplifierGlobal.h  CMakeLists.txt  Init.py  InitGui.py  README.en.md  README.md
App/: AppCADSimplifier.cpp  BOPAlgo_RemoveFillets.cpp  BOPAlgo_RemoveFillets.h  BRepAlgoAPI_RemoveFillet.cpp  BRepAlgoAPI_RemoveFillet.h  CMakeLists.txt  PreCompiled.h  SimplifierTool.cpp  SimplifierTool.h  SimplifierToolPy.xml  SimplifierToolPyImp.cpp  Test_MergeFaces.cpp  Test_MergeFaces.h  UtilExtendSurface.cpp  UtilExtendSurface.h
Gui/: AppCADSimplifierGui.cpp  CMakeLists.txt  Command.cpp  DlgGetNeighborFaces.cpp  DlgGetNeighborFaces.h  DlgGetNeighborFaces.ui  PreCompiled.h  Workbench.cpp  Workbench.h
Gui/Resources/: CADSimplifier.qrc
